[package]
name = "tracing-json"
version = "0.1.0"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tracing = { version = "0.1.13", default-features = false, features = ["log", "std"] }
tracing-subscriber = { version = "0.2.5", default-features = false, features = ["registry", "fmt"] }
tracing-log = { version = "0.1" }
log = "0.4.8"
thiserror = "1.0"
chrono = "0.4.11"

[dev-dependencies]
tracing = { version = "0.1.13", default-features = false, features = ["log", "std", "attributes"] }
