[package]
name = "tracing-json"
version = "0.1.1-alpha.0"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"
description = "Tracing Structured Json Logging Adapter"
keywords = ["tracing", "logging", "metrics", "json", "subscriber"]
categories = ["development-tools", "development-tools::debugging", "development-tools::profiling"]
homepage = "https://github.com/vertexclique/tracing-json"
repository = "https://github.com/vertexclique/tracing-json"
documentation = "https://docs.rs/tracing-json"
readme = "README.md"
license = "Apache-2.0/MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tracing = { version = "0.1.13", default-features = false, features = ["log", "std"] }
tracing-subscriber = { version = "0.2.5", default-features = false, features = ["registry", "fmt"] }
tracing-log = "0.1"
thiserror = "1.0"
chrono = "0.4.11"

[dev-dependencies]
tracing = { version = "0.1.13", default-features = false, features = ["log", "std", "attributes"] }
